--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "radium": "^0.19.6",
     "react": "^16.1.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.1.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
